# gdext

./: .gitignore  .gitmodules  .rustfmt.toml  CLAUDE.md  Cargo.toml  Changelog.md  Contributing.md  ReadMe.md  TODO.md  check.sh  expand.txt  rustfmt.toml
demo-project/rust/: Cargo.toml
demo-project/rust/src/: hud.rs  lib.rs  main_scene.rs  mob.rs  player.rs
examples/hot-reload/rust/: Cargo.toml
examples/multiplayer-bomber/rust/: Cargo.toml
gdext-builtin/: Cargo.toml
gdext-builtin/src/: arrays.rs  color.rs  godot_ffi.rs  init.rs  lib.rs  macros.rs  others.rs  string.rs  variant.rs  vector2.rs  vector3.rs  vector4.rs
gdext-builtin/src/variant/: mod.rs  variant_traits.rs
gdext-codegen/: Cargo.toml
gdext-codegen/input/: gdnative_interface.h  tweak.patch
gdext-codegen/src/: api_parser.rs  central_generator.rs  class_generator.rs  godot_exe.rs  godot_version.rs  lib.rs  special_cases.rs  util.rs  utilities_generator.rs
gdext-macros/: Cargo.toml
gdext-macros/src/: derive_godot_class.rs  gdextension.rs  godot_api.rs  itest.rs  lib.rs  util.rs
gdext-sys/: Cargo.toml  build.rs
gdext-sys/src/: global_registry.rs  godot_ffi.rs  lib.rs  opaque.rs  plugins.rs  ptrcall.rs  ptrcall_arg.rs
godot/: Cargo.toml  crate-readme.md
godot-bindings/: Cargo.toml  build.rs
godot-bindings/res/: tweak.patch
godot-bindings/src/: godot_exe.rs  godot_json.rs  godot_version.rs  header_gen.rs  import.rs  lib.rs  watch.rs
godot-cell/: Cargo.toml
godot-cell/src/: blocking_cell.rs  blocking_guards.rs  borrow_state.rs  cell.rs  guards.rs  lib.rs
godot-cell/tests/: mock.rs
godot-cell/tests/mock/: blocking.rs  main.rs  panicking.rs
godot-codegen/: Cargo.toml
godot-codegen/input/: gdextension_interface.h  gdnative_interface.h  tweak.patch
godot-codegen/src/: api_parser.rs  central_generator.rs  class_generator.rs  codegen_special_cases.rs  context.rs  domain_mapping.rs  domain_models.rs  godot_exe.rs  godot_version.rs  interface_generator.rs  json_models.rs  lib.rs  special_cases.rs  tests.rs  util.rs  utilities_generator.rs  watch.rs
godot-codegen/src/conv/: mod.rs  name_conversions.rs  type_conversions.rs
godot-codegen/src/formatter/: mod.rs
godot-codegen/src/generator/: builtins.rs  central_files.rs  classes.rs  constants.rs  default_parameters.rs  docs.rs  enums.rs  extension_interface.rs  functions_common.rs  gdext_build_struct.rs  generated_header.rs  header_codegen.rs  import_docs.rs  lifecycle_builtins.rs  method_tables.rs  mod.rs  native_structures.rs  notifications.rs  rid_tags.rs  signals.rs  sys.rs  sys_pointer_types.rs  u64_handling.rs  utility_functions.rs  virtual_definition_consts.rs  virtual_definitions.rs  virtual_hashes.rs  virtual_traits.rs
godot-codegen/src/models/: api_json.rs  domain.rs  domain_mapping.rs  header_json.rs  json.rs  mod.rs
godot-codegen/src/special_cases/: codegen_special_cases.rs  mod.rs  special_cases.rs
godot-core/: Cargo.toml  build.rs
godot-core/src/: bind.rs  deprecated.rs  docs.rs  engine.rs  export.rs  lib.rs  log.rs  macros.rs  native_structure.rs  private.rs  property.rs  property_info.rs  registry.rs  storage.rs  test_stubs.rs
godot-core/src/builder/: method.rs  mod.rs
godot-core/src/builtin/: aabb.rs  array.rs  arrays.rs  async_runtime.rs  basis.rs  call.rs  callable.rs  color.rs  color_constants.rs  color_hsv.rs  dictionary.rs  glam_helpers.rs  macros.rs  math.rs  mod.rs  node_path.rs  others.rs  packed_array.rs  plane.rs  projection.rs  quaternion.rs  real.rs  rect2.rs  rect2i.rs  rid.rs  rid_new.rs  signal.rs  string.rs  string_chars.rs  string_name.rs  transform2d.rs  transform3d.rs  typed_signal.rs  vector2.rs  vector2i.rs  vector3.rs  vector3i.rs  vector4.rs  vector4i.rs  vector_macros.rs
godot-core/src/classes/: class_runtime.rs  manual_extensions.rs  match_class.rs  mod.rs  rids.rs  type_safe_replacements.rs
godot-core/src/engine/: gfile.rs  manual_extensions.rs  mod.rs  script_instance.rs  translate.rs
godot-core/src/extras/: gfile.rs  mod.rs  script_instance.rs  translate.rs
godot-core/src/global/: mod.rs  print.rs  save_load.rs
godot-core/src/init/: discovery.rs  mod.rs
godot-core/src/meta/: array_type_info.rs  as_arg.rs  class_id.rs  class_name.rs  conv.rs  cow_arg.rs  element_type.rs  godot_range.rs  inspect.rs  method_info.rs  mod.rs  object_to_owned.rs  param_tuple.rs  property_info.rs  property_update.rs  raw_ptr.rs  ref_arg.rs  rpc_config.rs  sealed.rs  shape.rs  signature.rs  signature2.rs  signed_range.rs  traits.rs  uniform_object_deref.rs
godot-core/src/registry/: as_func.rs  callbacks.rs  class.rs  class_metadata.rs  constant.rs  godot_register_wrappers.rs  info.rs  method.rs  mod.rs  plugin.rs  property.rs  reg_validation.rs  rpc_config.rs  shard.rs  typed_signal.rs  validate.rs
godot-core/src/signal/: connect_builder.rs  connect_handle.rs  mod.rs  signal_connections_registry.rs  signal_object.rs  signal_receiver.rs  typed_signal.rs
godot-core/src/storage/: instance_storage.rs  mod.rs  (+2 more)
godot-core/tests/: rid_markers_test.rs
godot-ffi/: Cargo.toml  build.rs
godot-ffi/src/: assertions.rs  atomic_enum.rs  conv.rs  extras.rs  gdextension_plus.rs  gen_central_stub.rs  global.rs  global_registry.rs  godot_ffi.rs  init_level.rs  interface_init.rs  lib.rs  linux_reload_workaround.rs  multi_extension.rs  opaque.rs  plugins.rs  shard_registry.rs  string_cache.rs  toolbox.rs
godot-fmt/: Cargo.toml
godot-fmt/benches/: gdext_bench.rs
godot-fmt/src/: lib.rs
godot-fmt/test-cases/: ip_unix.rs.txt  rendering_server.rs.txt
godot-input/: Cargo.toml
godot-input/res/: tweak.patch
godot-input/src/: godot_exe.rs  header_gen.rs  lib.rs
godot-macros/: Cargo.toml  build.rs
godot-macros/src/: bench.rs  derive_export.rs  derive_from_variant.rs  derive_godot_class.rs  derive_property.rs  derive_to_variant.rs  docs.rs  ffi_macros.rs  gdextension.rs  godot_api.rs  godot_cfg.rs  itest.rs  lib.rs  util.rs
godot/src/: __docs.rs  lib.rs  prelude.rs
godot/tests/: docs.rs  docs.xml  godot_runtime_tests.rs
itest/rust/: Cargo.toml  build.rs
test-project/native/: Cargo.toml
(+585 files in other folders)
