[workspace]
resolver = "2"
members = [
    "godot-bindings",
    "godot-codegen",
    "godot-ffi",
    "godot-core",
    "godot-macros",
    "godot-cell",
    "godot",

    # Godot integration
    "itest/rust",
    "itest/repo-tweak",
    "examples/dodge-the-creeps/rust",
    "examples/hot-reload/rust",
]
