[workspace]
resolver = "2"
members = [
    "godot-bindings",
    "godot-codegen",
    "godot-ffi",
    "godot-core",
    "godot-macros",
    "godot-cell",
    "godot",

    # Godot integration
    "itest/rust",
    "itest/repo-tweak",
    "itest/hot-reload/rust",
]

# All dependencies except own crates of this project should be specified here, independently of whether they're dev, build or
# regular dependencies. Sort alphabetically within each section; comments about a dependency come on the section header.
[workspace.dependencies]
# Related to godot-rust.
gdextension-api = { version = "0.3.2", git = "https://github.com/godot-rust/godot4-prebuilt", branch = "release-v0.3" }

# Main library features.
glam = { version = "0.30", features = ["debug-glam-assert"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Related to tooling/build setup.
# * regex: not used for unicode parsing -> features unicode-bool + unicode-gencat are enabled instead of unicode-perl.
#          'unicode-gencat' needed for \d, see https://docs.rs/regex/latest/regex/#unicode-features.
bindgen = { version = "0.72.1", default-features = false, features = ["runtime"] }
libc = "0.2.172"
regex = { version = "1.11", default-features = false, features = ["std", "unicode-bool", "unicode-gencat"] }
which = "7"

# Macros and codegen. Minimal versions compatible with -Zminimal-versions.
# * proc_macro2: Literal::c_string() added in 1.0.80.
# * quote: 1.0.37 allows tokenizing CStr.
# * venial: 0.6.1 contains some bugfixes.
heck = "0.5"
litrs = { version = "1.0", features = ["proc-macro2"] }
markdown = "=1.0.0-alpha.23"
nanoserde = "0.2"
proc-macro2 = "1.0.80"
quote = "1.0.37"
venial = "0.6.1"

# Testing (godot-cell, itest).
proptest = "1.6.0"
pin-project-lite = { version = "0.2" }

# Note about Jetbrains IDEs: "IDE Sync" (Refresh Cargo projects) may cause static analysis errors such as
# "at most one `api-*` feature can be enabled". This is because by default, all Cargo features are enabled,
# which isn't a setup we support. To address this, individual features can be enabled in the various
# Cargo.toml files: https://www.jetbrains.com/help/rust/rust-cfg-support.html#enable-disable-feature-manually.
