[package]
name = "gdext-builtin"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#"real_is_double" = ["gdext-sys/real_is_double"]
convenience = []

[dependencies]
gdext-sys = { path = "../gdext-sys" }
glam = "0.17"
once_cell = "1.8"