[package]
name = "gdext-builtin"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#"real_is_double" = ["godot-ffi/real_is_double"]
convenience = []
default = ["convenience"]

[dependencies]
godot-ffi = { path = "../godot-ffi" }
glam = "0.17"
once_cell = "1.8"