[package]
name = "gdext-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
#venial = "0.4"
venial = { git = "https://github.com/Bromeon/venial.git", branch = "feature/impl" }
#syn = { version = "1", features = ["full", "extra-traits", "visit", "visit-mut"] }
