[package]
name = "gdext-sys"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
"real_is_double" = []

[dependencies]
paste = "1"

[build-dependencies]
bindgen = { version = "0.60.1", default-features = false, features = [] }
gdext-codegen = { path = "../gdext-codegen" }
