[package]
name = "godot-bindings"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MPL-2.0"
keywords = ["gamedev", "godot", "engine", "ffi", "sys"]
categories = ["game-engines", "graphics"]
description = "Internal crate used by godot-rust"
repository = "https://github.com/godot-rust/gdext"
homepage = "https://godot-rust.github.io"

# Since features are additive, and we want the user to user prebuilt by default, we need to have `prebuilt-godot` as the
# default feature. However, it's not possible to _disable_ the prebuilt dependency when specifying `api-custom` (without
# requiring no-default-features), so we unfortunately still need to depend on prebuilt and just ignore it.
# The artifact generator explicitly excludes that though (to avoid a quasi-circular dependency back to its repo).
[features]
# [version-sync] [[
#  [line] api-$kebabVersion = ["dep:prebuilt-$kebabVersion"]
api-4-0 = ["dep:prebuilt-4-0"]
api-4-0-1 = ["dep:prebuilt-4-0-1"]
api-4-0-2 = ["dep:prebuilt-4-0-2"]
api-4-0-3 = ["dep:prebuilt-4-0-3"]
api-4-0-4 = ["dep:prebuilt-4-0-4"]
api-4-1 = ["dep:prebuilt-4-1"]
api-4-1-1 = ["dep:prebuilt-4-1-1"]
api-4-1-2 = ["dep:prebuilt-4-1-2"]
api-4-1-3 = ["dep:prebuilt-4-1-3"]
api-4-1-4 = ["dep:prebuilt-4-1-4"]
api-4-2 = ["dep:prebuilt-4-2"]
api-4-2-1 = ["dep:prebuilt-4-2-1"]
api-4-2-2 = ["dep:prebuilt-4-2-2"]
# ]]

# [version-sync] [[
#  [include] current.minor
#  [line] default = ["dep:prebuilt-$kebabVersion"]
default = ["dep:prebuilt-4-2"]
# ]]

api-custom = ["dep:bindgen", "dep:regex", "dep:which"]
api-custom-extheader = []

[dependencies]
# [version-sync] [[
#  [line] prebuilt-$kebabVersion = { optional = true, package = "godot4-prebuilt", git = "https://github.com/godot-rust/godot4-prebuilt", branch = "$dotVersion" }
prebuilt-4-0 = { optional = true, package = "godot4-prebuilt", git = "https://github.com/godot-rust/godot4-prebuilt", branch = "4.0" }
prebuilt-4-0-1 = { optional = true, package = "godot4-prebuilt", git = "https://github.com/godot-rust/godot4-prebuilt", branch = "4.0.1" }
prebuilt-4-0-2 = { optional = true, package = "godot4-prebuilt", git = "https://github.com/godot-rust/godot4-prebuilt", branch = "4.0.2" }
prebuilt-4-0-3 = { optional = true, package = "godot4-prebuilt", git = "https://github.com/godot-rust/godot4-prebuilt", branch = "4.0.3" }
prebuilt-4-0-4 = { optional = true, package = "godot4-prebuilt", git = "https://github.com/godot-rust/godot4-prebuilt", branch = "4.0.4" }
prebuilt-4-1 = { optional = true, package = "godot4-prebuilt", git = "https://github.com/godot-rust/godot4-prebuilt", branch = "4.1" }
prebuilt-4-1-1 = { optional = true, package = "godot4-prebuilt", git = "https://github.com/godot-rust/godot4-prebuilt", branch = "4.1.1" }
prebuilt-4-1-2 = { optional = true, package = "godot4-prebuilt", git = "https://github.com/godot-rust/godot4-prebuilt", branch = "4.1.2" }
prebuilt-4-1-3 = { optional = true, package = "godot4-prebuilt", git = "https://github.com/godot-rust/godot4-prebuilt", branch = "4.1.3" }
prebuilt-4-1-4 = { optional = true, package = "godot4-prebuilt", git = "https://github.com/godot-rust/godot4-prebuilt", branch = "4.1.4" }
prebuilt-4-2 = { optional = true, package = "godot4-prebuilt", git = "https://github.com/godot-rust/godot4-prebuilt", branch = "4.2" }
prebuilt-4-2-1 = { optional = true, package = "godot4-prebuilt", git = "https://github.com/godot-rust/godot4-prebuilt", branch = "4.2.1" }
prebuilt-4-2-2 = { optional = true, package = "godot4-prebuilt", git = "https://github.com/godot-rust/godot4-prebuilt", branch = "4.2.2" }
# ]]

# Do not use bindgen 0.69, it contains regression that forces recompilation of code.
bindgen = { optional = true, version = "0.68", default-features = false, features = ["runtime"] }
# regex >= 1.5.5 for security: https://blog.rust-lang.org/2022/03/08/cve-2022-24713.html
# 'unicode-gencat' needed for \d, see: https://docs.rs/regex/1.5.5/regex/#unicode-features
regex = { optional = true, version = "1.5.5", default-features = false, features = ["std", "unicode-gencat"] }
which = { optional = true, version = "6" }

[dev-dependencies]
# For tests, we need regex unconditionally. Keep this in sync with above dependency.
regex = { version = "1.5.5", default-features = false, features = ["std", "unicode-gencat"] }

# https://docs.rs/about/metadata
[package.metadata.docs.rs]
features = ["experimental-godot-api"]
rustdoc-args = ["--cfg", "published_docs"]

# Currently causes "unused manifest key" warnings. Maybe re-enable in the future, to make `published_docs` known.
#[lints.rust]
#unexpected_cfgs = { level = "warn", check-cfg = ['cfg(published_docs)'] }
