[package]
name = "godot-codegen"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MPL-2.0"
keywords = ["gamedev", "godot", "engine", "codegen"]
categories = ["game-engines", "graphics"]
description = "Internal crate used by godot-rust"
repository = "https://github.com/godot-rust/gdext"
homepage = "https://godot-rust.github.io"

[features]
default = ["codegen-fmt"]
codegen-fmt = []
codegen-full = []
codegen-lazy-fptrs = []
double-precision = []
api-custom = ["godot-bindings/api-custom"]
experimental-godot-api = []

[dependencies]
godot-bindings = { path = "../godot-bindings" }

heck = "0.4"
nanoserde = "0.1.35"

# Minimum versions compatible with -Zminimal-versions
proc-macro2 = "1.0.63"
quote = "1.0.29"

# Since we don't use Regex for unicode parsing, the features unicode-bool/unicode-gencat are used instead of unicode-perl.
# See also https://docs.rs/regex/latest/regex/#unicode-features.
regex = { version = "1.5.5", default-features = false, features = ["std", "unicode-bool", "unicode-gencat"] }

[build-dependencies]
godot-bindings = { path = "../godot-bindings" } # emit_godot_version_cfg

# https://docs.rs/about/metadata
[package.metadata.docs.rs]
features = ["experimental-godot-api"]
rustdoc-args = ["--cfg", "published_docs"]

# Currently causes "unused manifest key" warnings. Maybe re-enable in the future, to make `published_docs` known.
#[lints.rust]
#unexpected_cfgs = { level = "warn", check-cfg = ['cfg(published_docs)'] }

# To check formatter: Disabled below, since it pulls in too many dependencies during `cargo test` but is not really used.
# Dev-dependencies cannot be optional and feature-gated. Enable manually when needed.

#[[bench]]
#name = "gdext_fmt_bench"
#harness = false
#
#[dev-dependencies]
#criterion = "0.5"

