[package]
name = "godot-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MPL-2.0"
keywords = ["gamedev", "godot", "engine", "2d", "3d"] # possibly: "ffi"
categories = ["game-engines", "graphics"]
description = "Internal crate used by godot-rust"
repository = "https://github.com/godot-rust/gdext"
homepage = "https://godot-rust.github.io"

[features]
default = []
codegen-fmt = ["godot-ffi/codegen-fmt", "godot-codegen/codegen-fmt"]
codegen-full = ["godot-codegen/codegen-full"]
codegen-lazy-fptrs = [
    "godot-ffi/codegen-lazy-fptrs",
    "godot-codegen/codegen-lazy-fptrs",
]
double-precision = ["godot-codegen/double-precision"]
experimental-godot-api = ["godot-codegen/experimental-godot-api"]
experimental-threads = ["godot-ffi/experimental-threads"]
debug-log = ["godot-ffi/debug-log"]
trace = []

api-custom = ["godot-ffi/api-custom", "godot-codegen/api-custom"]
# [version-sync] [[
#  [line] api-$kebabVersion = ["godot-ffi/api-$kebabVersion"]
api-4-0 = ["godot-ffi/api-4-0"]
api-4-0-1 = ["godot-ffi/api-4-0-1"]
api-4-0-2 = ["godot-ffi/api-4-0-2"]
api-4-0-3 = ["godot-ffi/api-4-0-3"]
api-4-0-4 = ["godot-ffi/api-4-0-4"]
api-4-1 = ["godot-ffi/api-4-1"]
api-4-1-1 = ["godot-ffi/api-4-1-1"]
api-4-1-2 = ["godot-ffi/api-4-1-2"]
api-4-1-3 = ["godot-ffi/api-4-1-3"]
api-4-1-4 = ["godot-ffi/api-4-1-4"]
api-4-2 = ["godot-ffi/api-4-2"]
api-4-2-1 = ["godot-ffi/api-4-2-1"]
api-4-2-2 = ["godot-ffi/api-4-2-2"]
# ]]

[dependencies]
godot-ffi = { path = "../godot-ffi" }

# See https://docs.rs/glam/latest/glam/index.html#feature-gates
glam = { version = "0.27", features = ["debug-glam-assert"] }
serde = { version = "1", features = ["derive"], optional = true }
godot-cell = { path = "../godot-cell" }

# Reverse dev dependencies so doctests can use `godot::` prefix
[dev-dependencies]
godot = { path = "../godot" }
serde_json = { version = "1.0" }

[build-dependencies]
godot-bindings = { path = "../godot-bindings" }
godot-codegen = { path = "../godot-codegen" }

# https://docs.rs/about/metadata
[package.metadata.docs.rs]
features = ["experimental-godot-api"]
rustdoc-args = ["--cfg", "published_docs"]

# Currently causes "unused manifest key" warnings. Maybe re-enable in the future, to make `published_docs` known.
#[lints.rust]
#unexpected_cfgs = { level = "warn", check-cfg = ['cfg(published_docs)'] }
