[package]
name = "godot-ffi"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MPL-2.0"
keywords = ["gamedev", "godot", "engine", "ffi"]
categories = ["game-engines", "graphics"]

[features]
api-custom = ["godot-bindings/api-custom"]
codegen-fmt = ["godot-codegen/codegen-fmt"]
codegen-lazy-fptrs = ["godot-codegen/codegen-lazy-fptrs"]
experimental-godot-api = ["godot-codegen/experimental-godot-api"]
experimental-threads = []
debug-log = []
api-4-0 = ["godot-bindings/api-4-0"]
api-4-1 = ["godot-bindings/api-4-1"]

# TODO: get rid of paste and gensym, they are trivially implementable with proc-macros. Update cargo-deny.
# Especially gensym which pulls in entire syn for 10 LoC. See https://github.com/regiontog/gensym/blob/master/src/lib.rs.
# Might however require godot-ffi to depend on godot-macro, which is not ideal...
[dependencies]
paste = "1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.153"

[target.'cfg(target_family = "wasm")'.dependencies]
gensym = "0.1.1"

[build-dependencies]
godot-bindings = { path = "../godot-bindings" }
godot-codegen = { path = "../godot-codegen" }

# https://docs.rs/about/metadata
[package.metadata.docs.rs]
features = ["experimental-godot-api"]
rustdoc-args = ["--cfg", "published_docs"]
