[package]
name = "godot-fmt"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1"


# Disabled below, since it pulls in too many dependencies during `cargo test` but is not really used.
# Dev-dependencies cannot be optional and feature-gated. Enable manually when needed.

#[[bench]]
#name = "gdext_bench"
#harness = false
#
#[dev-dependencies]
#criterion = "0.5"
