[package]
name = "godot-input"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"
license = "MPL-2.0"
keywords = ["gamedev", "godot", "engine", "ffi", "sys"]
categories = ["game-engines", "graphics"]

[features]
custom-godot = ["dep:bindgen", "dep:regex", "dep:which"]

[dependencies]
godot4-artifacts = { git = "https://github.com/godot-rust/godot4-artifacts", branch = "4.0" }

# Version >= 1.5.5 for security: https://blog.rust-lang.org/2022/03/08/cve-2022-24713.html
# 'unicode-gencat' needed for \d, see: https://docs.rs/regex/1.5.5/regex/#unicode-features
bindgen = { optional = true, version = "0.64", default-features = false, features = ["runtime"] }
regex = { optional = true, version = "1.5.5", default-features = false, features = ["std", "unicode-gencat"] }
which = { optional = true, version = "4" }
