[package]
name = "godot-macros"
version = "0.1.3"
edition = "2021"
rust-version = "1.80"
license = "MPL-2.0"
keywords = ["gamedev", "godot", "engine", "derive", "macro"]
categories = ["game-engines", "graphics"]
description = "Internal crate used by godot-rust"
repository = "https://github.com/godot-rust/gdext"
homepage = "https://godot-rust.github.io"

[features]
api-custom = ["godot-bindings/api-custom"]
docs = ["dep:markdown"]

[lib]
proc-macro = true

[dependencies]
# Minimum versions compatible with -Zminimal-versions
proc-macro2 = "1.0.80" # Literal::c_string() added in 1.0.80.
quote = "1.0.29"

# Enabled by `docs`
markdown = { version = "1.0.0-alpha.17", optional = true }
venial = "0.6"

[build-dependencies]
godot-bindings = { path = "../godot-bindings", version = "=0.1.3" } # emit_godot_version_cfg

# Reverse dev dependencies so doctests can use `godot::` prefix.
[dev-dependencies]
godot = { path = "../godot", default-features = false }

# https://docs.rs/about/metadata
[package.metadata.docs.rs]
features = ["experimental-godot-api"]
rustdoc-args = ["--cfg", "published_docs"]

# Currently causes "unused manifest key" warnings. Maybe re-enable in the future, to make `published_docs` known.
#[lints.rust]
#unexpected_cfgs = { level = "warn", check-cfg = ['cfg(published_docs)'] }
